# promiditheus

./: .gitignore  Makefile  Pipfile  README.md  config.yml  main.py  setup.cfg  setup.py
examples/: README.md
examples/node-exporter/: README.md  node-exporter-lead-sheet.yml  node-exporter.mid
examples/temp-humidity-string-quartet/: README.md  string-quartet.mid  temp-humidity-string-quartet.yml
src/promiditheus/: __init__.py  instruments.yml  scale.yml
