[metadata]
name = promiditheus
version = 0.0.1
author = Daniel Watkins
author_email = daniel@daniel-watkins.co.uk
description = Generate MIDI from Prometheus metrics
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/OddBloke/promiditheus
project_urls =
    Bug Tracker = https://github.com/OddBloke/promiditheus/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
install_requires =
    mido
    music21
    python-rtmidi
    pyyaml
    requests
python_requires = >=3.8

[options.entry_points]
console_scripts =
    promiditheus = main:live_main
    promiditheus-generate = main:generate_main
